# papyrus

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  application.yaml.template  build.gradle.kts  build.sh  config.go  data.go  docker-compose.yml  go.mod  go.sum  jenkins.go  main.go  papyrus.go  settings.gradle.kts  sqlx-data.json  utils.go
.github/workflows/: build.yml
cli/: cli.go  tools.go  utils.go
cmd/: add.go  delete.go  migrate.go  root.go  serve.go  update.go
data/: jenkins.go
db/: client.go  database.go  serializer.go  utils.go
http/: builds.go  projects.go  router.go  server.go  versions.go
http/v1/: builds.go
jenkins/: jenkins.go  types.go
migrations/: 20220706193405_initial_structure.sql
plugins/jenkins/: build.gradle  settings.gradle
plugins/jenkins/src/main/resources/: index.jelly
shared/: config.go  data.go  utils.go
src/: config.rs  main.rs  models.rs  router.rs  server.rs  types.rs  utils.rs
src/main/java/org/purpurmc/papyrus/: Main.java  Papyrus.java  PapyrusApplication.java  PapyrusConfig.java
src/main/java/org/purpurmc/papyrus/api/: BuildHandler.java  ProjectHandler.java  VersionHandler.java
src/main/java/org/purpurmc/papyrus/bean/: CreateDataStorageBean.java
src/main/java/org/purpurmc/papyrus/commands/: APICommand.java  PapyrusCommand.java
src/main/resources/: application.yaml
src/main/resources/db/migration/: V1__initial_structure.sql  V2__build_ready.sql  V3__build_metadata.sql  V4__project_metadata.sql
src/router/: builds.rs  middleware.rs  projects.rs  upload.rs  versions.rs
src/server/: middleware.rs  router.rs  tasks.rs
src/server/middleware/: require_key.rs
src/server/router/: builds.rs  create.rs  projects.rs  upload.rs  versions.rs
src/server/tasks/: clear_temp.rs
src/types/: models.rs  request.rs  response.rs
src/types/models/: sqlite.rs
types/: http.go  jenkins.go  mongo.go  shared.go
utils/: utils.go
v1/: http.go  migrate.go
web/: builds.go  projects.go  utils.go  version.go  versions.go  web.go
web/docs/: index.html
(+46 files in other folders)
