[package]
name = "papyrus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.1"
actix-multipart-extract = "0.1.4"

nanoid = "0.4.0"
mime_guess = "2.0.4"
md5 = "0.7.0"
env_logger = "0.9.0"

thiserror = "1.0.31"
dotenv = "0.15.0"
futures-util = "0.3.21"

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.82"
features = ["preserve_order"]

[dependencies.sqlx]
version = "0.6.0"
features = ["sqlite", "runtime-actix-rustls", "migrate", "chrono", "offline"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
