[package]
name = "papyrus"
version = "2.0.0-indev"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
actix-multipart-extract = "0.1.4"
qstring = "0.7.2"

md5 = "0.7.0"
nanoid = "0.4.0"
mime_guess = "2.0.4"
thiserror = "1.0.34"

dotenv = "0.15.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
async-trait = "0.1.57"

[dependencies.serde]
version = "1.0.139"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.83"
features = ["preserve_order"]

[dependencies.sqlx]
version = "0.6.1"
features = ["sqlite", "runtime-actix-rustls", "migrate", "chrono", "offline"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]
